<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:title="@string/home_tittle"
        app:showAsAction="never"
        android:icon="@drawable/ic_home"
        />

    <item
        android:id="@+id/action_exercise"
        android:title="@string/home_exercise"
        app:showAsAction="never"
        android:icon="@drawable/ic_directions"
        />

    <item
        android:id="@+id/action_store"
        android:title="@string/home_store"
        app:showAsAction="never"
        android:icon="@drawable/ic_store"
        />
    <item
        android:id="@+id/action_diets"
        android:title="@string/home_diets"
        app:showAsAction="never"
        android:icon="@drawable/ic_food"
        />

    <item
        android:id="@+id/action_profile"
        android:title="@string/home_profile"
        app:showAsAction="never"
        android:icon="@drawable/ic_account"
        />
</menu>